# hurdle

./: .gitignore  CHANGELOG.md  README.md  hurdle.cabal  wordle-cli.cabal  wordlist.csv  wordlist.txt
app/: Main.hs  Render.hs  Util.hs  WordList.hs  Wordle.hs
