cabal-version:      2.4
name:               wordle-cli
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chris Renfrow
maintainer:         dev@chrisrenfrow.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wordle-cli
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Wordle

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base          ^>=4.14.3.0
                    , bytestring    ^>=0.10.12.0
                    , ansi-terminal ^>=0.6.2.3
                    , mtl           ^>=2.2.2
                    , random        ^>=1.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
